--- a/examples/Periodic points of the logistic map.ipynb
+++ b/examples/Periodic points of the logistic map.ipynb
@@ -65,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "2-element Array{(Interval{Float64},Symbol),1}:\n",
+       "2-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-6.968514798756479e-17, 1.3517743393731552e-16],:unique)\n",
        " ([0.6774193548387095, 0.6774193548387097],:unique)        "
       ]
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "4-element Array{(Interval{Float64},Symbol),1}:\n",
+       "4-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-6.233702290330726e-17, 1.1931689491945523e-16],:unique)\n",
        " ([0.5580141252026949, 0.5580141252026971],:unique)        \n",
        " ([0.6774193548387076, 0.6774193548387121],:unique)        \n",
@@ -185,7 +185,7 @@
     {
      "data": {
       "text/plain": [
-       "4-element Array{(Interval{Float64},Symbol),1}:\n",
+       "4-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-9.947150462130687e-17, 1.1038772564320529e-16],:unique)\n",
        " ([0.5580141252026949, 0.5580141252026971],:unique)        \n",
        " ([0.6774193548387076, 0.6774193548387116],:unique)        \n",
@@ -212,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "8-element Array{(Interval{Float64},Symbol),1}:\n",
+       "8-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-9.361862579270038e-17, 1.0515086331210236e-16],:unique)\n",
        " ([0.3828196830173237, 0.3828196830173243],:unique)        \n",
        " ([0.4285714285714273, 0.4285714285714295],:unique)        \n",
@@ -243,7 +243,7 @@
     {
      "data": {
       "text/plain": [
-       "16-element Array{(Interval{Float64},Symbol),1}:\n",
+       "16-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-6.450867901675527e-17, 1.5719872312603065e-16],:unique)\n",
        " ([0.3548004479999936, 0.35480044799999727],:unique)       \n",
        " ([0.36112003982837154, 0.36112003982838603],:unique)      \n",
@@ -282,7 +282,7 @@
     {
      "data": {
       "text/plain": [
-       "16-element Array{(Interval{Float64},Symbol),1}:\n",
+       "16-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-9.468711597088143e-17, 1.0093800912363333e-16],:unique)\n",
        " ([0.35480044799999333, 0.3548004479999971],:unique)       \n",
        " ([0.3611200398283715, 0.3611200398283861],:unique)        \n",
@@ -321,7 +321,7 @@
     {
      "data": {
       "text/plain": [
-       "256-element Array{(Interval{Float64},Symbol),1}:\n",
+       "256-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-6.685942182571293e-17, 9.736289924187537e-17],:unique) \n",
        " ([0.00014942107845312833, 0.0001494210784532221],:unique) \n",
        " ([0.00015177401106415282, 0.00015177401106424558],:unique)\n",
@@ -370,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "220598-element Array{(Interval{Float64},Symbol),1}:\n",
+       "220598-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-0.0001, -9.999906849116088e-5],:unknown)              \n",
        " ([-9.999906849116087e-5, -9.999813698232174e-5],:unknown)\n",
        " ([-9.999813698232173e-5, -9.99972054734826e-5],:unknown) \n",
@@ -419,7 +419,7 @@
     {
      "data": {
       "text/plain": [
-       "65069-element Array{(Interval{Float64},Symbol),1}:\n",
+       "65069-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([1.3273284430570427e-5, 1.327328443066284e-5],:unique) \n",
        " ([1.7795734016136777e-5, 1.779573401628048e-5],:unique) \n",
        " ([1.8612681896730634e-5, 1.8612681896823096e-5],:unique)\n",
@@ -490,7 +490,7 @@
     {
      "data": {
       "text/plain": [
-       "32-element Array{(Interval{Float64},Symbol),1}:\n",
+       "32-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-5.660020044625717e-17, 1.3150105603012344e-16],:unique)\n",
        " ([0.00903565136864659, 0.009035651368646704],:unique)     \n",
        " ([0.010235029373752695, 0.010235029373752817],:unique)    \n",
@@ -560,7 +560,7 @@
     {
      "data": {
       "text/plain": [
-       "1024-element Array{(Interval{Float64},Symbol),1}:\n",
+       "1024-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-1.0220696221544258e-16, 8.283033843053199e-17],:unique)\n",
        " ([9.394002137712196e-6, 9.394002137833982e-6],:unique)    \n",
        " ([9.430769118680364e-6, 9.430769118773784e-6],:unique)    \n",
@@ -631,7 +631,7 @@
     {
      "data": {
       "text/plain": [
-       "2048-element Array{(Interval{Float64},Symbol),1}:\n",
+       "2048-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([-3.7739729411576187e-17, 7.443905684961557e-17],:unique)\n",
        " ([2.350798951126237e-6, 2.3507989511639162e-6],:unique)   \n",
        " ([2.3553948387492456e-6, 2.3553948388366314e-6],:unique)  \n",
@@ -702,7 +702,7 @@
     {
      "data": {
       "text/plain": [
-       "1-element Array{(Interval{Float64},Symbol),1}:\n",
+       "1-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([0.9999994111509435, 0.9999994111509436],:unique)"
       ]
      },
@@ -725,7 +725,7 @@
     {
      "data": {
       "text/plain": [
-       "1-element Array{(Interval{BigFloat},Symbol),1}:\n",
+       "1-element Array{(BareInterval{BigFloat},Symbol),1}:\n",
        " ([9.999994111509435535683237673405515492356983378423455810550216538164422108648822e-01, 9.999994111509435535683237673405515492356983378423455810550216538164422108648995e-01]₂₅₆,:unique)"
       ]
      },
