--- a/examples/Range of 2-dimensional functions.ipynb
+++ b/examples/Range of 2-dimensional functions.ipynb
@@ -32,11 +32,11 @@
    "source": [
     "import Base.split\n",
     "\n",
-    "function split{T<:Real}(x::Interval{T}, n::Integer)\n",
+    "function split{T<:Real}(x::BareInterval{T}, n::Integer)\n",
     "    \n",
     "    width = diam(x) / n\n",
     "    \n",
-    "    intervals = [Interval(x.lo + width*i, x.lo + width*(i+1)) for i in 0:n-1]\n",
+    "    intervals = [BareInterval(x.lo + width*i, x.lo + width*(i+1)) for i in 0:n-1]\n",
     "    \n",
     "end\n",
     "\n",
@@ -684,7 +684,7 @@
    ],
    "source": [
     "import Base.mod \n",
-    "function mod(X::Interval, width::Real)\n",
+    "function mod(X::BareInterval, width::Real)\n",
     "    \n",
     "    \n",
     "    @show X, width\n",
@@ -692,18 +692,18 @@
     "    X /= width\n",
     "    \n",
     "    if diam(X) >= 1.\n",
-    "        return [Interval(0, width)]\n",
+    "        return [BareInterval(0, width)]\n",
     "    end\n",
     "    \n",
     "    a = X.lo - floor(X.lo)\n",
     "    b = X.hi - floor(X.hi)\n",
     "    \n",
     "    if a < b\n",
-    "        return [Interval(a, b)*width]\n",
+    "        return [BareInterval(a, b)*width]\n",
     "        \n",
     "    end\n",
     "    \n",
-    "    return [Interval(0, b)*width, Interval(a, 1)*width]\n",
+    "    return [BareInterval(0, b)*width, BareInterval(a, 1)*width]\n",
     "    \n",
     "end"
    ]
@@ -718,7 +718,7 @@
     {
      "data": {
       "text/plain": [
-       "1-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "1-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.3, 0.5]"
       ]
      },
@@ -728,7 +728,7 @@
     }
    ],
    "source": [
-    "mod(Interval(0.3, 0.5), 1)"
+    "mod(BareInterval(0.3, 0.5), 1)"
    ]
   },
   {
@@ -741,7 +741,7 @@
     {
      "data": {
       "text/plain": [
-       "2-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "2-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.0, 0.19999999999999996]\n",
        " [0.3, 1.0]                "
       ]
@@ -752,7 +752,7 @@
     }
    ],
    "source": [
-    "mod(Interval(0.3, 1.2), 1)"
+    "mod(BareInterval(0.3, 1.2), 1)"
    ]
   },
   {
@@ -765,7 +765,7 @@
     {
      "data": {
       "text/plain": [
-       "1-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "1-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.0, 1.0]"
       ]
      },
@@ -775,7 +775,7 @@
     }
    ],
    "source": [
-    "mod(Interval(0.3, 1.5), 1)"
+    "mod(BareInterval(0.3, 1.5), 1)"
    ]
   },
   {
@@ -893,7 +893,7 @@
     {
      "data": {
       "text/plain": [
-       "2-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "2-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.0, 0.7168146928204147]             \n",
        " [5.999999999999998, 6.283185307179587]"
       ]
@@ -917,7 +917,7 @@
     {
      "data": {
       "text/plain": [
-       "2-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "2-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.0, 0.7168146928204147]             \n",
        " [5.999999999999998, 6.283185307179587]"
       ]
@@ -1091,7 +1091,7 @@
     }
    ],
    "source": [
-    "function IntervalBox{T}(X::Vector{Interval{T}}, Y::Vector{Interval{T}})\n",
+    "function IntervalBox{T}(X::Vector{BareInterval{T}}, Y::Vector{BareInterval{T}})\n",
     "    vec([IntervalBox(x, y) for x in X, y in Y])\n",
     "end"
    ]
@@ -1151,7 +1151,7 @@
     {
      "data": {
       "text/plain": [
-       "ValidatedNumerics.Interval{Float64}"
+       "ValidatedNumerics.BareInterval{Float64}"
       ]
      },
      "execution_count": 70,
@@ -1180,7 +1180,7 @@
     {
      "data": {
       "text/plain": [
-       "1-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "1-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.0, 1.8414709848078974]"
       ]
      },
@@ -1219,9 +1219,9 @@
     }
    ],
    "source": [
-    "mod2pi{T}(x::Interval{T}) = mod(x, ValidatedNumerics.two_pi(T))\n",
+    "mod2pi{T}(x::BareInterval{T}) = mod(x, ValidatedNumerics.two_pi(T))\n",
     "\n",
-    "mod2pi{T}(X::Vector{Interval{T}}) = map(mod2pi, X)"
+    "mod2pi{T}(X::Vector{BareInterval{T}}) = map(mod2pi, X)"
    ]
   },
   {
@@ -1234,7 +1234,7 @@
     {
      "data": {
       "text/plain": [
-       "2-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "2-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.0, 0.7168146928204147]             \n",
        " [5.999999999999998, 6.283185307179587]"
       ]
@@ -1295,10 +1295,10 @@
     },
     {
      "ename": "LoadError",
-     "evalue": "LoadError: MethodError: `convert` has no method matching convert(::Type{ValidatedNumerics.Interval{T}}, ::Array{ValidatedNumerics.Interval{Float64},1})\nThis may have arisen from a call to the constructor ValidatedNumerics.Interval{T}(...),\nsince type constructors fall back to convert methods.\nClosest candidates are:\n  call{T}(::Type{T}, ::Any)\n  convert{T<:Real}(::Type{T<:Real}, !Matched::Complex{T<:Real})\n  convert{T<:Number}(::Type{T<:Number}, !Matched::Char)\n  ...\nwhile loading In[84], in expression starting on line 1",
+     "evalue": "LoadError: MethodError: `convert` has no method matching convert(::Type{ValidatedNumerics.BareInterval{T}}, ::Array{ValidatedNumerics.BareInterval{Float64},1})\nThis may have arisen from a call to the constructor ValidatedNumerics.BareInterval{T}(...),\nsince type constructors fall back to convert methods.\nClosest candidates are:\n  call{T}(::Type{T}, ::Any)\n  convert{T<:Real}(::Type{T<:Real}, !Matched::Complex{T<:Real})\n  convert{T<:Number}(::Type{T<:Number}, !Matched::Char)\n  ...\nwhile loading In[84], in expression starting on line 1",
      "output_type": "error",
      "traceback": [
-      "LoadError: MethodError: `convert` has no method matching convert(::Type{ValidatedNumerics.Interval{T}}, ::Array{ValidatedNumerics.Interval{Float64},1})\nThis may have arisen from a call to the constructor ValidatedNumerics.Interval{T}(...),\nsince type constructors fall back to convert methods.\nClosest candidates are:\n  call{T}(::Type{T}, ::Any)\n  convert{T<:Real}(::Type{T<:Real}, !Matched::Complex{T<:Real})\n  convert{T<:Number}(::Type{T<:Number}, !Matched::Char)\n  ...\nwhile loading In[84], in expression starting on line 1",
+      "LoadError: MethodError: `convert` has no method matching convert(::Type{ValidatedNumerics.BareInterval{T}}, ::Array{ValidatedNumerics.BareInterval{Float64},1})\nThis may have arisen from a call to the constructor ValidatedNumerics.BareInterval{T}(...),\nsince type constructors fall back to convert methods.\nClosest candidates are:\n  call{T}(::Type{T}, ::Any)\n  convert{T<:Real}(::Type{T<:Real}, !Matched::Complex{T<:Real})\n  convert{T<:Number}(::Type{T<:Number}, !Matched::Char)\n  ...\nwhile loading In[84], in expression starting on line 1",
       "",
       " in call at /Users/dpsanders/.julia/v0.4/FixedSizeArrays/src/constructors.jl:92",
       " in standard_map at In[77]:9",
@@ -1311,7 +1311,7 @@
      "text": [
       "\n",
       "(X,width) = ([0.0, 2.8414709848078976],[6.283185307179586, 6.283185307179587])\n",
-      "(p′,θ′) = (ValidatedNumerics.Interval{Float64}[[0.0, 1.8414709848078974]],[ValidatedNumerics.Interval{Float64}[[0.0, 2.8414709848078985]]])\n"
+      "(p′,θ′) = (ValidatedNumerics.BareInterval{Float64}[[0.0, 1.8414709848078974]],[ValidatedNumerics.BareInterval{Float64}[[0.0, 2.8414709848078985]]])\n"
      ]
     }
    ],
@@ -1329,7 +1329,7 @@
     {
      "data": {
       "text/plain": [
-       "1-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "1-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.0, 1.8414709848078974]"
       ]
      },
@@ -1339,7 +1339,7 @@
     }
    ],
    "source": [
-    "p = [ValidatedNumerics.Interval{Float64}(0.0, 1.8414709848078974)]"
+    "p = [ValidatedNumerics.BareInterval{Float64}(0.0, 1.8414709848078974)]"
    ]
   },
   {
@@ -1352,7 +1352,7 @@
     {
      "data": {
       "text/plain": [
-       "1-element Array{ValidatedNumerics.Interval{Float64},1}:\n",
+       "1-element Array{ValidatedNumerics.BareInterval{Float64},1}:\n",
        " [0.0, 2.8414709848078985]"
       ]
      },
