--- a/examples/Roots of Wilkinson polynomials.ipynb
+++ b/examples/Roots of Wilkinson polynomials.ipynb
@@ -293,7 +293,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{(Interval{Float64},Symbol),1}:\n",
+       "3-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([0.9999999999999994, 1.0000000000000009],:unique)\n",
        " ([1.999999999999999, 2.0000000000000027],:unique) \n",
        " ([2.999999999999997, 3.0000000000000004],:unique) "
@@ -332,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{(Interval{BigFloat},Symbol),1}:\n",
+       "3-element Array{(BareInterval{BigFloat},Symbol),1}:\n",
        " ([9.999999999999999999999999999999999999999999999999999999999999999999999999999568e-01, 1.000000000000000000000000000000000000000000000000000000000000000000000000000069e+00]₂₅₆,:unique)\n",
        " ([1.999999999999999999999999999999999999999999999999999999999999999999999999999914e+00, 2.000000000000000000000000000000000000000000000000000000000000000000000000000207e+00]₂₅₆,:unique)\n",
        " ([2.999999999999999999999999999999999999999999999999999999999999999999999999999758e+00, 3.000000000000000000000000000000000000000000000000000000000000000000000000000035e+00]₂₅₆,:unique)"
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "setprecision(Interval, 256)\n",
+    "setprecision(BareInterval, 256)\n",
     "@time roots2 = newton(W₃, @interval(-10, 10))"
    ]
   },
@@ -372,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{(Interval{BigFloat},Symbol),1}:\n",
+       "3-element Array{(BareInterval{BigFloat},Symbol),1}:\n",
        " ([1e+00, 1e+00]₂₅₆,:unique)                                                                                                                                                              \n",
        " ([2e+00, 2e+00]₂₅₆,:unique)                                                                                                                                                              \n",
        " ([2.999999999999999999999999999999999999999999999999999999999999999999999999999758e+00, 3.000000000000000000000000000000000000000000000000000000000000000000000000000035e+00]₂₅₆,:unique)"
@@ -384,7 +384,7 @@
     }
    ],
    "source": [
-    "setprecision(Interval, 256)\n",
+    "setprecision(BareInterval, 256)\n",
     "@time roots3 = newton(W₃, roots)"
    ]
   },
@@ -412,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "10-element Array{(Interval{Float64},Symbol),1}:\n",
+       "10-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([0.999999999999997, 1.0000000000000042],:unique) \n",
        " ([1.9999999999997027, 2.0000000000002287],:unique)\n",
        " ([2.9999999999975757, 3.000000000003865],:unique) \n",
@@ -431,8 +431,8 @@
     }
    ],
    "source": [
-    "setprecision(Interval, Float64)\n",
-    "setrounding(Interval, :narrow)\n",
+    "setprecision(BareInterval, Float64)\n",
+    "setrounding(BareInterval, :narrow)\n",
     "@time roots = newton(W₁₀, @interval(-20, 20))"
    ]
   },
@@ -453,7 +453,7 @@
     {
      "data": {
       "text/plain": [
-       "10-element Array{(Interval{Float64},Symbol),1}:\n",
+       "10-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([0.9999999999999781, 1.000000000000022],:unique) \n",
        " ([1.9999999999986873, 2.0000000000015774],:unique)\n",
        " ([2.9999999999769145, 3.00000000002351],:unique)  \n",
@@ -472,8 +472,8 @@
     }
    ],
    "source": [
-    "setprecision(Interval, Float64)\n",
-    "setrounding(Interval, :wide)\n",
+    "setprecision(BareInterval, Float64)\n",
+    "setrounding(BareInterval, :wide)\n",
     "@time roots = newton(W₁₀, @interval(-20, 20))"
    ]
   },
@@ -501,7 +501,7 @@
     {
      "data": {
       "text/plain": [
-       "10-element Array{(Interval{BigFloat},Symbol),1}:\n",
+       "10-element Array{(BareInterval{BigFloat},Symbol),1}:\n",
        " ([9.999999999999999999999999999999999999999999999999999999999999999999999999982555e-01, 1.000000000000000000000000000000000000000000000000000000000000000000000000001986e+00]₂₅₆,:unique)\n",
        " ([1.999999999999999999999999999999999999999999999999999999999999999999999999897851e+00, 2.000000000000000000000000000000000000000000000000000000000000000000000000132513e+00]₂₅₆,:unique)\n",
        " ([2.999999999999999999999999999999999999999999999999999999999999999999999998161947e+00, 3.000000000000000000000000000000000000000000000000000000000000000000000001994126e+00]₂₅₆,:unique)\n",
@@ -520,7 +520,7 @@
     }
    ],
    "source": [
-    "setprecision(Interval, 256)\n",
+    "setprecision(BareInterval, 256)\n",
     "@time roots2 = newton(W₁₀, @interval(-20, 20))"
    ]
   },
@@ -548,7 +548,7 @@
     {
      "data": {
       "text/plain": [
-       "10-element Array{(Interval{BigFloat},Symbol),1}:\n",
+       "10-element Array{(BareInterval{BigFloat},Symbol),1}:\n",
        " ([9.999999999999999999999999999999999999999999999999999999999999999999999999981691e-01, 1.00000000000000000000000000000000000000000000000000000000000000000000000000171e+00]₂₅₆,:unique) \n",
        " ([1.999999999999999999999999999999999999999999999999999999999999999999999999890355e+00, 2.000000000000000000000000000000000000000000000000000000000000000000000000109645e+00]₂₅₆,:unique)\n",
        " ([2.999999999999999999999999999999999999999999999999999999999999999999999998081009e+00, 3.000000000000000000000000000000000000000000000000000000000000000000000001815703e+00]₂₅₆,:unique)\n",
@@ -567,7 +567,7 @@
     }
    ],
    "source": [
-    "setprecision(Interval, 256)\n",
+    "setprecision(BareInterval, 256)\n",
     "@time roots3 = newton(W₁₀, roots)"
    ]
   },
@@ -596,7 +596,7 @@
     {
      "data": {
       "text/plain": [
-       "60-element Array{(Interval{Float64},Symbol),1}:\n",
+       "60-element Array{(BareInterval{Float64},Symbol),1}:\n",
        " ([0.9999999999999738, 1.000000000000032],:unique)  \n",
        " ([1.9999999999968605, 2.000000000003299],:unique)  \n",
        " ([2.999999999937011, 3.0000000000693854],:unique)  \n",
@@ -631,8 +631,8 @@
     }
    ],
    "source": [
-    "setprecision(Interval, Float64)\n",
-    "setrounding(Interval, :wide)\n",
+    "setprecision(BareInterval, Float64)\n",
+    "setrounding(BareInterval, :wide)\n",
     "@time roots = newton(W₁₂, @interval(-20, 20))\n",
     "roots = ValidatedNumerics.clean_roots(roots)"
    ]
@@ -661,7 +661,7 @@
     {
      "data": {
       "text/plain": [
-       "50-element Array{(Interval{BigFloat},Symbol),1}:\n",
+       "50-element Array{(BareInterval{BigFloat},Symbol),1}:\n",
        " ([9.999999999999999999999999999999999999999999999999999999999999999999999999975473e-01, 1.000000000000000000000000000000000000000000000000000000000000000000000000002366e+00]₂₅₆,:unique)\n",
        " ([1.999999999999999999999999999999999999999999999999999999999999999999999999764993e+00, 2.000000000000000000000000000000000000000000000000000000000000000000000000245854e+00]₂₅₆,:unique)\n",
        " ([2.999999999999999999999999999999999999999999999999999999999999999999999994929464e+00, 3.000000000000000000000000000000000000000000000000000000000000000000000005324129e+00]₂₅₆,:unique)\n",
@@ -696,7 +696,7 @@
     }
    ],
    "source": [
-    "setprecision(Interval, 256)\n",
+    "setprecision(BareInterval, 256)\n",
     "@time roots2 = newton(W₁₂, roots)\n",
     "roots2 = ValidatedNumerics.clean_roots(roots2)"
    ]
