--- a/examples/Calculating rigorous bounds on pi.ipynb
+++ b/examples/Calculating rigorous bounds on pi.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interval arithmetic "
+    "## BareInterval arithmetic "
    ]
   },
   {
